# tree-sitter-nyashyker_translate

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-nyashyker_translate.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_nyashyker_translate/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterNyashykerTranslate/: nyashyker_translate.h
bindings/swift/TreeSitterNyashykerTranslateTests/: TreeSitterNyashykerTranslateTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: test.txt
