[package]
name = "tree-sitter-nyashyker-translate"
description = "The translation writing standart made by Nyashyker for Nyashyker in consultation with his translators."
version = "3.0.1"
authors = ["Nyashyker <nyashyker@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "nyashyker-translate"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nyashyker/nyashykertranslate.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
