[package]
name = "tree-sitter-nyashyker-translate"
description = "The translation writing standart made by Nyashyker for Nyashyker in consultation with his translators."
version = "3.1.0"
authors = ["Nyashyker <nyashyker@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "nyashyker-translate"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nyashyker/nyashykertranslate.git"
edition = "2024"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
tree-sitter-highlight = "0.22.0"
tree-sitter-javascript = "0.21.3"
